--- a/lazy-redis.cabal
+++ b/lazy-redis.cabal
@@ -10,18 +10,30 @@ Maintainer:          tebrow@gmail.com
            
 Category:            Database
 Build-type:          Simple
-Cabal-version:       >=1.2
+Cabal-version:       >= 1.10
 
 Extra-source-files: 
  LICENSE
  README.md
 
 Library
-  Hs-source-dirs: src
+  Default-language: Haskell98
+  Hs-source-dirs:   src
 
   Exposed-modules:
     Database.Redis.Data
   
   Build-depends:
-    base == 4.*  
+    base == 4.*
+  
+Test-suite test-lazy-redis
+  Default-language: Haskell98
+  Hs-source-dirs:   test src
+  Type:             exitcode-stdio-1.0
+  Main-is:          Main.hs
+  Build-depends:
+    base,
+    HUnit >= 1.2.2,
+    test-framework-hunit >= 0.2.6,
+    test-framework >= 0.3.3
   
